# dawify

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.post.txt  setup.sh
dawify/: config.py  dw_config.py  dw_metric.py  dw_metrics.py  mis_utils.py  run.py
dawify/enhancer/: apollo.py  apollo_utils.py
dawify/midify/: mt3.py  mt3_utils.py
dawify/pipeline/: audio_processing  pipeline.py
dawify/post_processing/: base.py  chord_progression.py  hi_hat.py  norm_drum_notes.py  norm_velocity.py  rhythm.py  utils.py
dawify/pre_processing/: audioPreProcessor.py
dawify/track_split/: demuc_mod.py
dawify/vis/: viz_midi.py
depricated/: dw_metrics.py
depricated/data/: proc_utils.py
scripts/: demucs_step1.sh  entrypoint.sh  setup.sh
tests/post_processing/: test_norm_drum_notes.py  test_norm_velocity.py
wandb/: latest-run
wandb/run-20250103_172847-qbp7gdfu/: run-qbp7gdfu.wandb
wandb/run-20250103_172847-qbp7gdfu/files/: config.yaml  wandb-metadata.json
wandb/run-20250106_150843-z6z4geni/: run-z6z4geni.wandb
wandb/run-20250106_150843-z6z4geni/files/: config.yaml  (+1 more)
wandb/run-20250106_151107-8ihnigjy/: run-8ihnigjy.wandb
wandb/run-20250106_151505-9aj1q7w9/: run-9aj1q7w9.wandb
wandb/run-20250106_151600-r0zvsidf/: run-r0zvsidf.wandb
wandb/run-20250106_155950-45ie8ps8/: run-45ie8ps8.wandb
wandb/run-20250106_160014-n5t3oyo7/: run-n5t3oyo7.wandb
wandb/run-20250107_192913-h1bc0a1i/: run-h1bc0a1i.wandb
wandb/run-20250107_193011-c6yfmmfb/: run-c6yfmmfb.wandb
wandb/run-20250107_193134-tl67xrqv/: run-tl67xrqv.wandb
(+10 files in other folders)
