[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dawify"
version = "0.1"
dependencies = [
    "demucs==4.0.1",
    "tyro",
    "awscli",
    "ml_collections",
    "pytorch_lightning==2.5.0",
]

[tool.setuptools.packages.find]
include = ["dawify"]
